Added completed property to notes.

--- a/src/app/components/note/note.component.html
+++ b/src/app/components/note/note.component.html
@@ -1,1 +1,7 @@
-<p>{{ note.title }}</p>
+<div>
+    <p>
+        <input type="checkbox"/>
+        {{ note.title }}
+        <button class="del">X</button>
+    </p>
+</div>
