--- a/src/app/components/note/note.component.html
+++ b/src/app/components/note/note.component.html
@@ -2,6 +2,7 @@
     <p>
         <input (change)="onCompletedToggle(note)" type="checkbox"/>
         {{ note.title }}
-        <button (click)="onDeleted(note)" class="del">X</button>
+        <button (click)="onDeleted(note)" class="del">X</button><br>
+        {{ note.contents }}{{ note.modified }}
     </p>
 </div>
