--- a/src/app/components/notebook/notebook.component.html
+++ b/src/app/components/notebook/notebook.component.html
@@ -1,2 +1,3 @@
-<app-note *ngFor="let note of notebook" [note]="note">
+<app-note *ngFor="let note of notebook" [note]="note"
+(deleteNote)="deleteNote($event)">
 </app-note>
