--- a/src/app/components/note/note.component.html
+++ b/src/app/components/note/note.component.html
@@ -1,8 +1,9 @@
 <div [ngClass]="setClasses()">
     <p>
         <input (change)="onCompletedToggle(note)" type="checkbox"/>
-        ({{ note.id }}){{ note.title }}
-        <button (click)="onDeleted(note)" class="del">X</button><br>
-        {{ note.contents }}{{ note.modified }}
+        {{ note.id }})&nbsp;&nbsp;{{ note.title }}
+        <button (click)="onDeleted(note)" class="del">X</button>
+        <button class="date">{{ note.modified }}</button>
     </p>
+    <p>{{ note.contents }}</p>
 </div>
