--- a/src/styles.css
+++ b/src/styles.css
@@ -7,10 +7,11 @@
 body{
     font-family: Arial, Helvetica, sans-serif;
     line-height: 1.4;
+    background: #bbb;
 }
 
 a{
-    color: #333;
+    color: rgb(22, 124, 219);
     text-decoration: none;
 }
 
@@ -21,8 +22,8 @@ a{
 .btn{
     display: inline-block;
     border: none;
-    background: #444;
-    color: #3030ee;
-    padding: 7px 20px;
+    background: rgb(27, 34, 48);
+    color: #fff;
+    padding: 10px 20px;
     cursor: pointer;
 }
