Add Note Functional.

--- a/src/app/components/notebook/notebook.component.html
+++ b/src/app/components/notebook/notebook.component.html
@@ -1,4 +1,3 @@
-<app-add-note></app-add-note>
-<app-note *ngFor="let note of notebook" [note]="note"
-(deleteNote)="deleteNote($event)">
+<app-add-note (addNote)="addNote($event)"></app-add-note>
+<app-note *ngFor="let note of notebook" [note]="note" (deleteNote)="deleteNote($event)">
 </app-note>
